Design prayer,bible-study,others and filter-results and alter and fix the  issues

--- a/styles/index.css
+++ b/styles/index.css
@@ -4,10 +4,11 @@ body {
   width: 100%; }
   body .wrapper {
     width: 100%;
-    height: 900px; }
-    body .wrapper .myVideo {
-      height: 900px;
-      background-size: cover; }
+    height: 700px; }
+    body .wrapper .my-video {
+      width: 1265px;
+      background-size: cover;
+      position: relative; }
   body .content {
     top: 0%;
     position: absolute;
@@ -37,37 +38,14 @@ body {
           font-size: 17px;
           font-family: Montserrat, sans-serif;
           font-weight: 600; }
-        body .content .top-nav .right #icon {
+        body .content .top-nav .right a:hover {
+          color: #6300cc; }
+        body .content .top-nav .right .hamburger-icon {
           display: none; }
-      body .content .top-nav .right.responsive {
-        width: 150px;
-        background-color: rgba(68, 65, 65, 0.343);
-        position: relative;
-        border-radius: 5px;
-        z-index: 1; }
-        body .content .top-nav .right.responsive a {
-          display: block;
-          width: 200px;
-          padding: 15px 5px 15px 10px;
-          text-align: left; }
-        body .content .top-nav .right.responsive #icon {
-          width: 35px;
-          display: block;
-          position: absolute;
-          right: 0;
-          top: 0; }
-      body .content .top-nav .top-nav.responsive .right .icon {
-        display: block;
-        position: absolute;
-        right: 0;
-        top: 0; }
-      body .content .top-nav .top-nav.responsive .right a {
-        display: block;
-        text-align: left; }
   body .center-content {
     top: 0%;
     position: absolute;
-    margin: 300px 0px 0px 200px;
+    margin: 270px 0px 0px 200px;
     text-align: left; }
     body .center-content h2 {
       width: 84%;
@@ -88,8 +66,8 @@ body {
       margin-bottom: 40px; }
     body .center-content a {
       font-family: Montserrat, sans-serif;
-      font-size: 16px;
-      padding: 15px 40px;
+      font-size: 20px;
+      padding: 15px 35px;
       text-decoration: none;
       border-radius: 8px;
       color: white;
@@ -109,43 +87,43 @@ body {
       margin: auto; }
       body footer .row .col-5 {
         padding: 0%; }
-        body footer .row .col-5 #logo-info #foot-logo {
+        body footer .row .col-5 .logo-info .foot-logo {
           width: 60px;
           margin-left: 20px; }
-        body footer .row .col-5 #logo-info ul {
+        body footer .row .col-5 .logo-info ul {
           list-style-type: none;
           margin-left: 20px;
           padding: 0%; }
-          body footer .row .col-5 #logo-info ul li {
+          body footer .row .col-5 .logo-info ul li {
             margin: 10px 0px; }
-            body footer .row .col-5 #logo-info ul li #org-name {
+            body footer .row .col-5 .logo-info ul li .org-name {
               width: 255px; }
-            body footer .row .col-5 #logo-info ul li h4 {
+            body footer .row .col-5 .logo-info ul li h4 {
               font-family: Montserrat, sans-serif;
               line-height: 2;
               color: white;
               font-size: 14px;
-              font-weight: 500;
+              font-weight: 600;
               margin: 0px; }
       body footer .row .col-7 {
         padding: 0%; }
-        body footer .row .col-7 #foot-menu {
+        body footer .row .col-7 .foot-menu {
           list-style-type: none;
           margin-top: 140px;
           padding: 0%;
           text-align: right; }
-          body footer .row .col-7 #foot-menu li {
+          body footer .row .col-7 .foot-menu li {
             display: inline;
             padding: 0px 8px; }
-            body footer .row .col-7 #foot-menu li a {
+            body footer .row .col-7 .foot-menu li a {
               font-family: Montserrat, sans-serif;
-              font-weight: 700;
+              font-weight: 600;
               font-size: 14px;
               text-decoration: none;
               color: white; }
   body .copyright {
     text-align: center;
-    color: #9ca6bead;
+    color: #9CA6BE;
     font-family: open-sans, sans-serif;
     font-weight: 300;
     font-size: 12px; }
@@ -153,7 +131,7 @@ body {
 @media (max-width: 1024px) {
   body .wrapper {
     height: 700px; }
-    body .wrapper .myVideo {
+    body .wrapper .my-video {
       height: 700px; }
   body .content .top-nav .left {
     width: 15%;
@@ -175,22 +153,22 @@ body {
       padding: 13px 30px; }
   body footer {
     padding: 30px 0px; }
-    body footer .row .col-5 #logo-info ul {
+    body footer .row .col-5 .logo-info ul {
       margin-left: 20px;
       padding: 0%; }
-      body footer .row .col-5 #logo-info ul li {
+      body footer .row .col-5 .logo-info ul li {
         margin: 10px 0px; }
-        body footer .row .col-5 #logo-info ul li #org-name {
+        body footer .row .col-5 .logo-info ul li .org-name {
           width: 255px; }
-    body footer .row .col-7 #foot-menu {
+    body footer .row .col-7 .foot-menu {
       margin-top: 140px; }
-      body footer .row .col-7 #foot-menu li a {
+      body footer .row .col-7 .foot-menu li a {
         font-size: 14px; } }
 
 @media (max-width: 768px) {
   body .wrapper {
     height: 600px; }
-    body .wrapper .myVideo {
+    body .wrapper .my-video {
       height: 600px; }
   body .content .top-nav .left {
     padding: 20px; }
@@ -219,31 +197,31 @@ body {
     padding: 30px 0px; }
     body footer .row .col-5 {
       width: 60%; }
-      body footer .row .col-5 #logo-info {
+      body footer .row .col-5 .logo-info {
         margin-left: 80px; }
-        body footer .row .col-5 #logo-info ul {
+        body footer .row .col-5 .logo-info ul {
           margin-left: 20px;
           padding: 0%; }
-          body footer .row .col-5 #logo-info ul li {
+          body footer .row .col-5 .logo-info ul li {
             margin: 10px 0px; }
-            body footer .row .col-5 #logo-info ul li #org-name {
+            body footer .row .col-5 .logo-info ul li .org-name {
               width: 255px; }
     body footer .row .col-7 {
       width: 30%; }
-      body footer .row .col-7 #foot-menu {
+      body footer .row .col-7 .foot-menu {
         margin: 0px;
         padding: 0%; }
-        body footer .row .col-7 #foot-menu li {
+        body footer .row .col-7 .foot-menu li {
           display: block;
           text-align: left;
           padding: 14px 8px; }
-          body footer .row .col-7 #foot-menu li a {
+          body footer .row .col-7 .foot-menu li a {
             font-size: 14px; } }
 
 @media (max-width: 736px) {
   body .wrapper {
     height: 500px; }
-    body .wrapper .myVideo {
+    body .wrapper .my-video {
       height: 500px; }
   body .content .top-nav .left {
     width: 15%;
@@ -270,13 +248,13 @@ body {
       font-size: 13px; }
   body footer {
     padding: 30px 0px; }
-    body footer .row #foot-menu li a {
+    body footer .row .foot-menu li a {
       font-size: 12px; } }
 
 @media (max-width: 684px) {
   body .wrapper {
     height: 450px; }
-    body .wrapper .myVideo {
+    body .wrapper .my-video {
       height: 450px; }
   body .content .top-nav .left {
     width: 13%;
@@ -303,15 +281,15 @@ body {
       padding: 13px 25px; }
   body footer .row {
     width: 95%; }
-    body footer .row #foot-menu {
+    body footer .row .foot-menu {
       margin-left: 20px; }
-      body footer .row #foot-menu li a {
+      body footer .row .foot-menu li a {
         font-size: 12px; } }
 
 @media (max-width: 667px) {
   body .wrapper {
     height: 500px; }
-    body .wrapper .myVideo {
+    body .wrapper .my-video {
       height: 500px; }
   body .content .top-nav .right {
     width: 73%; }
@@ -330,29 +308,29 @@ body {
     padding: 35px 0px; }
     body footer .row .col-5 {
       width: 60%; }
-      body footer .row .col-5 #logo-info {
+      body footer .row .col-5 .logo-info {
         margin-left: 40px; }
-        body footer .row .col-5 #logo-info ul {
+        body footer .row .col-5 .logo-info ul {
           margin-left: 20px;
           padding: 0%; }
-          body footer .row .col-5 #logo-info ul li {
+          body footer .row .col-5 .logo-info ul li {
             margin: 10px 0px; }
-            body footer .row .col-5 #logo-info ul li #org-name {
+            body footer .row .col-5 .logo-info ul li .org-name {
               width: 255px; }
     body footer .row .col-7 {
       width: 30%; }
-      body footer .row .col-7 #foot-menu {
+      body footer .row .col-7 .foot-menu {
         margin-top: 20px; }
-        body footer .row .col-7 #foot-menu li {
+        body footer .row .col-7 .foot-menu li {
           text-align: left; }
-          body footer .row .col-7 #foot-menu li a {
+          body footer .row .col-7 .foot-menu li a {
             display: block;
             font-size: 14px; } }
 
 @media (max-width: 415px) {
   body .wrapper {
     height: 700px; }
-    body .wrapper .myVideo {
+    body .wrapper .my-video {
       height: 700px; }
   body .content .top-nav .left {
     width: 27%;
@@ -366,12 +344,37 @@ body {
     margin-top: 30px; }
     body .content .top-nav .right a {
       display: none; }
-    body .content .top-nav .right #icon {
+    body .content .top-nav .right .hamburger-icon {
       display: block;
       float: right;
       margin: 0px 10px; }
-      body .content .top-nav .right #icon i {
+      body .content .top-nav .right .hamburger-icon i {
         font-size: 20px; }
+  body .content .top-nav .right.responsive {
+    width: 150px;
+    background-color: rgba(68, 65, 65, 0.343);
+    position: relative;
+    border-radius: 5px;
+    z-index: 1; }
+    body .content .top-nav .right.responsive a {
+      display: block;
+      width: 200px;
+      padding: 15px 5px 15px 10px;
+      text-align: left; }
+    body .content .top-nav .right.responsive .hamburger-icon {
+      width: 35px;
+      display: block;
+      position: absolute;
+      right: 0;
+      top: 0; }
+  body .content .top-nav .top-nav.responsive .right .hamburger-icon {
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0; }
+  body .content .top-nav .top-nav.responsive .right a {
+    display: block;
+    text-align: left; }
   body .center-content {
     margin-top: 180px;
     margin-left: 0px;
@@ -394,22 +397,22 @@ body {
     padding: 30px 0px; }
     body footer .row .col-5 {
       width: 100%; }
-      body footer .row .col-5 #logo-info {
+      body footer .row .col-5 .logo-info {
         margin-left: 55px; }
-        body footer .row .col-5 #logo-info ul {
+        body footer .row .col-5 .logo-info ul {
           margin-left: 20px;
           padding: 0%; }
-          body footer .row .col-5 #logo-info ul li {
+          body footer .row .col-5 .logo-info ul li {
             margin: 10px 0px; }
-            body footer .row .col-5 #logo-info ul li #org-name {
+            body footer .row .col-5 .logo-info ul li .org-name {
               width: 255px; }
     body footer .row .col-7 {
       width: 100%; }
-      body footer .row .col-7 #foot-menu {
+      body footer .row .col-7 .foot-menu {
         margin-top: 0px; }
-        body footer .row .col-7 #foot-menu li {
+        body footer .row .col-7 .foot-menu li {
           text-align: center; }
-          body footer .row .col-7 #foot-menu li a {
+          body footer .row .col-7 .foot-menu li a {
             display: block;
             font-size: 14px; } }
 
@@ -426,24 +429,24 @@ body {
     margin-top: 40px; }
     body .content .top-nav .right a {
       display: none; }
-    body .content .top-nav .right #icon {
+    body .content .top-nav .right .hamburger-icon {
       display: block;
       float: right; }
-  body footer .row .col-5 #logo-info {
+  body footer .row .col-5 .logo-info {
     margin-left: 20px; }
-    body footer .row .col-5 #logo-info ul {
+    body footer .row .col-5 .logo-info ul {
       margin-left: 20px;
       padding: 0%; }
-      body footer .row .col-5 #logo-info ul li {
+      body footer .row .col-5 .logo-info ul li {
         margin: 10px 0px; }
-        body footer .row .col-5 #logo-info ul li #org-name {
+        body footer .row .col-5 .logo-info ul li .org-name {
           width: 255px; }
   body footer .row .col-7 {
     width: 100%; }
-    body footer .row .col-7 #foot-menu {
+    body footer .row .col-7 .foot-menu {
       margin-top: 0px; }
-      body footer .row .col-7 #foot-menu li {
+      body footer .row .col-7 .foot-menu li {
         text-align: center; }
-        body footer .row .col-7 #foot-menu li a {
+        body footer .row .col-7 .foot-menu li a {
           display: block;
           font-size: 14px; } }
